sema/testdata/gcc-c90-as-c99/reject/Wincompatible-pointer-types-3.c
void *
f1 (int flag, int *a, long *b)
{
  return flag ? a : b;


}
